add data and images

--- a/2023-07-10t18-08-14z.md
+++ b/2023-07-10t18-08-14z.md
@@ -1,6 +1,6 @@
 ---
 date: 2023-07-10 18:08:14
-title: Another apporach to my thesis that we did not pursue
+title: Another approach to my thesis that we did not pursue
 id: 2023-07-10t18-08-14z
 tags: [msc_thesis]
 ---
