--- a/2023-08-16t15-22-18z.md
+++ b/2023-08-16t15-22-18z.md
@@ -25,7 +25,11 @@ training on multimodal data.
 
 We present the results of our training below
 
-INSERT TABLE HERE
+|                           | **Confounding Goal** |             | **True Goal** |             |
+|--------------------------:|---------------------:|------------:|--------------:|:-----------:|
+|                           |           **Visual** | **Textual** |    **Visual** | **Textual** |
+| **Causally Confused Env** |                0.995 |       0.999 |         0.995 |       0.999 |
+|            **Normal Env** |                0.631 |       0.851 |         0.263 |       0.124 |
 
 ![](gcbc_mm_gmg_multitask_new.png)
 
