add note about the task classifier

--- a/2023-08-17t09-59-48z.md
+++ b/2023-08-17t09-59-48z.md
@@ -22,10 +22,11 @@ tags: [msc_thesis]
 4. Experiments
    1. Does it even work/realistic
       1. CALVIN dataset task
-      2. setup
-      3. Results
-      4. starting state stuff?
-      5. clipt/cclipt checks
+      2. task classifier?
+      3. setup
+      4. Results
+      5. starting state stuff?
+      6. clipt/cclipt checks
    2. Goal Misgeneralization
       1. BabyAI
       2. Setup 1
