clipt sanity checks

--- a/2023-08-17t09-59-48z.md
+++ b/2023-08-17t09-59-48z.md
@@ -20,14 +20,15 @@ tags: [msc_thesis]
    3. Talk about CLIPT
    4. talk about CCLIPT
 4. Experiments
-   1. Does it even work/realistic
+   1. CLIPT sanity checks
+   2. Does it even work/realistic
       1. CALVIN dataset task
       2. task classifier?
       3. setup
       4. Results
       5. starting state stuff?
       6. clipt/cclipt checks
-   2. Goal Misgeneralization
+   3. Goal Misgeneralization
       1. BabyAI
       2. Setup 1
       3. Setup 2
