try evaluating with more frequent resets

--- a/2023-08-17t09-59-48z.md
+++ b/2023-08-17t09-59-48z.md
@@ -76,6 +76,8 @@ Then, goal misgeneralization
    - what should embeddings look like
    - associative learning -> gmg?
 
+Ontology identification???
+
 Related work
 
 Conditioned sequential decision making Causal Confusion and goal
