maybe add a section about multimodal learning

--- a/2023-08-17t09-59-48z.md
+++ b/2023-08-17t09-59-48z.md
@@ -42,6 +42,7 @@ tags: [msc_thesis]
    3. Causal Confusion/Goal Misgeneralization
    4. Grounding
    5. Foundation Models
+      - multimodal learning
 
 Goal misgeneralization is bad. we say it happens because the way task is
 specified is bad. how can we improve task specification. we focus on goal
