--- a/2023-07-25t11-51-49z.md
+++ b/2023-07-25t11-51-49z.md
@@ -11,7 +11,7 @@ quick and dirty [[knowledge dump]] for various numbers that may be useful for my
 
 ## [[CALVIN]]
 
-- When training ([C](2023-07-11t11-38-00z.md)[CLIPT](2023-07-10t16-36-37z.md),
+- When training ([C](2023-07-11t11-38-00z.md))[CLIPT](2023-07-10t16-36-37z.md),
 
   - Training split has 5124 samples
     - One sample is a sequence of frames with a length between 33 and 64 frames,
@@ -35,3 +35,7 @@ quick and dirty [[knowledge dump]] for various numbers that may be useful for my
     roughly.
     - this is because they sample sub-sequences from 5124 recorded sequences to
       increase training size
+
+## Report
+
+textwidth: 5.10686in
